[package]
name = "uk-covid-developer-api-rust-sdk"
version = "0.1.0"
authors = ["Sam <a>"]
edition = "2018"


[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "cookies", "gzip"] }
tokio = { version = "0.2", features = ["full"] }
regex = "1.3"
strum = "0.19"
strum_macros = "0.19"
#serde="1.0"
serde_json = "1.0"